# netbox-routeros

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.py
netbox_routeros/: __init__.py  filters.py  forms.py  models.py  navigation.py  ros_config_maker.py  tables.py  template_code.py  testing.py  urls.py  views.py
netbox_routeros/migrations/: 0001_initial.py  0002_configurationtemplate_tags.py  0003_auto_20210317_1230.py  0004_configureddevice_extra_configuration.py  0005_auto_20210318_1441.py
netbox_routeros/static/netbox_routeros/: ros-syntax.css
netbox_routeros/templates/routeros/: configuration_template.html  configuration_template_edit.html  configuration_template_list.html  configured_device.html  configured_device_edit.html  configured_device_list.html
netbox_routeros/templates/routeros/bases/: object_edit.html
netbox_routeros/tests/: test_ros_config_maker.py
netbox_routeros/utilities/: napalm.py  tables.py
tests/: test_netbox_routeros.py
